change style for mobile phones

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -109,3 +109,10 @@ html {
 .basketimg{
 	width: 50px;
 }
+/*768px*/
+@media (min-width: 990px){
+.col-md-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+	}
+}
