--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -6417,3 +6417,9 @@ html {
 .basketimg {
   width: 50px; }
 
+/*768px*/
+@media (min-width: 990px) {
+  .col-md-3 {
+    flex: 0 0 25%;
+    max-width: 25%; } }
+
