--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -111,8 +111,13 @@ html {
 }
 /*768px*/
 @media (min-width: 990px){
-.col-md-3 {
-    flex: 0 0 25%;
-    max-width: 25%;
+	.col-md-3 {
+	    flex: 0 0 25%;
+	    max-width: 25%;
+	}
+
+	.col-md-4 {
+	    flex: 0 0 33.33333%;
+	    max-width: 33.33333%;
 	}
 }
