change style for mobile phones

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -110,7 +110,7 @@ html {
 	width: 50px;
 }
 /*768px*/
-@media (min-width: 990px){
+/*@media (min-width: 990px){
 	.col-md-3 {
 	    flex: 0 0 25%;
 	    max-width: 25%;
@@ -120,4 +120,4 @@ html {
 	    flex: 0 0 33.33333%;
 	    max-width: 33.33333%;
 	}
-}
+}*/
