--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -6418,11 +6418,15 @@ html {
   width: 50px; }
 
 /*768px*/
-@media (min-width: 990px) {
-  .col-md-3 {
-    flex: 0 0 25%;
-    max-width: 25%; }
-  .col-md-4 {
-    flex: 0 0 33.33333%;
-    max-width: 33.33333%; } }
+/*@media (min-width: 990px){
+	.col-md-3 {
+	    flex: 0 0 25%;
+	    max-width: 25%;
+	}
+
+	.col-md-4 {
+	    flex: 0 0 33.33333%;
+	    max-width: 33.33333%;
+	}
+}*/
 
