change style for mobile phones

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -6323,7 +6323,8 @@ html {
 
 .product-image {
   max-height: 200px;
-  object-fit: contain; }
+  object-fit: contain;
+  cursor: pointer; }
 
 .product-price {
   max-height: 200px;
