--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -66,7 +66,7 @@ html {
 .categoryList-place {
     margin-top: 20px;
 }
-.category {
+.category, .product-title {
     cursor: pointer;
 }
 .category:hover{
